--- a/styles.css
+++ b/styles.css
@@ -95,3 +95,45 @@ body
     cursor: pointer;
     transform: scale(1.1);
 }
+
+.winnerModal
+{
+    background-color: #080807;
+    display: flex;
+    align-items: center;
+    width: 300px;
+    border-radius: 5px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    transition: 200ms ease-in-out;
+    border: 1px solid black;
+    z-index: 1;
+    align-items: center;
+    justify-content: center;
+    font-size: 32px;
+    color: #c3f30d;
+    padding: 30px;
+    font-family: sans-serif;
+}
+
+.winnerModal.active
+{
+    transform: translate(-50%, -50%) scale(1);
+    background-color: #080807;    
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: none;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.overlay.active {
+    display: block;
+}
